--- a/AndroidBienchen/res/layout/activity_main.xml
+++ b/AndroidBienchen/res/layout/activity_main.xml
@@ -4,5 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="de.androidbienchen.MainActivity"
-    tools:ignore="MergeRootFrame" />
+    tools:ignore="MergeRootFrame">
+	
+	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
+    <ImageView 
+    android:id="@+id/image"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    />
+    
+ </RelativeLayout>
+</FrameLayout>
