--- a/AndroidBienchen/res/layout/activity_cam.xml
+++ b/AndroidBienchen/res/layout/activity_cam.xml
@@ -1,39 +1,8 @@
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-   android:id="@+id/drawer_layout"
-   android:layout_width="match_parent"
-   android:layout_height="match_parent" >
-
-    <FrameLayout
-       android:id="@+id/content_fram"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent" />
-
-    <ListView
-       android:id="@+id/left_drawer"
-       android:layout_width="240dp"
-       android:layout_height="match_parent"
-       android:layout_gravity="start"
-       android:background="@color/purple_dark"
-       android:choiceMode="singleChoice"
-       android:divider="@android:color/darker_gray"
-       android:dividerHeight="0.1dp" 
-       android:listSelector="@drawable/navdrawer_listselector"/>
-    
-   <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="de.androidbienchen.CamActivity$PlaceholderFragment" >
+    tools:context="de.androidbienchen.CamActivity"
+    tools:ignore="MergeRootFrame" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
-</RelativeLayout>
-
-</android.support.v4.widget.DrawerLayout>
