--- a/AndroidBienchen/res/layout/fragment_scale.xml
+++ b/AndroidBienchen/res/layout/fragment_scale.xml
@@ -12,5 +12,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/statistic" />
+    
+    <ImageView 
+        android:id="@+id/image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
