--- a/AndroidBienchen/res/layout/activity_scale.xml
+++ b/AndroidBienchen/res/layout/activity_scale.xml
@@ -1,8 +1,12 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+    android:id="@+id/statistic_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="de.androidbienchen.ScaleActivity"
-    tools:ignore="MergeRootFrame" />
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="de.androidbienchen.ScaleActivity$PlaceholderFragment" >
 
+</LinearLayout>
