--- a/AndroidBienchen/res/layout/eventinsert_dialog.xml
+++ b/AndroidBienchen/res/layout/eventinsert_dialog.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/grad_kg_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/grad_kg_text_view"
         android:ems="10"
         android:hint="@string/insertname" >
 
