--- a/AndroidBienchen/res/drawable-hdpi/listitem_background.xml
+++ b/AndroidBienchen/res/drawable-hdpi/listitem_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_activated="true" android:drawable="@color/purple_middle" />
+    <item android:state_activated="true" android:drawable="@color/start_menu_button_color_dark" />
     <item android:drawable="@android:color/transparent" />
 </selector>
