--- a/AndroidBienchen/res/values/color.xml
+++ b/AndroidBienchen/res/values/color.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">       
-    <color name="purple_light">#a276eb</color> 
-    <color name="purple_middle">#8658ce</color>
-    <color name="purple_dark">#6a3ab2</color>
+    <color name="black">#000000</color>
+    <color name="start_menu_button_color_light">#F9CE1D</color>
+    <color name="start_menu_button_color_dark">#FF8800</color> 
+    <color name="start_menu_background_color">#FFEA40</color>
+
 </resources>
