added Geofence classes and reorganized project

--- a/AndroidBienchen/res/layout/fragment_scale.xml
+++ b/AndroidBienchen/res/layout/fragment_scale.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="de.androidbienchen.MainActivity$PlaceholderFragment" >
+    tools:context="de.androidbienchen.activities.MainActivity$PlaceholderFragment" >
 
     
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -18,7 +18,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="de.androidbienchen.MainActivity$PlaceholderFragment" >
+    tools:context="de.androidbienchen.activities.MainActivity$PlaceholderFragment" >
 	    
 	    <LinearLayout
 	        xmlns:android="http://schemas.android.com/apk/res/android"
@@ -33,7 +33,7 @@
 	        android:paddingLeft="@dimen/activity_horizontal_margin"
 	        android:paddingRight="@dimen/activity_horizontal_margin"
 	        android:paddingTop="@dimen/activity_vertical_margin"
-	        tools:context="de.androidbienchen.ScaleActivity$PlaceholderFragment" >
+	        tools:context="de.androidbienchen.activities.ScaleActivity$PlaceholderFragment" >
 	    </LinearLayout>
 
 	    <TextView
