--- a/AndroidBienchen/res/layout/fragment_cam.xml
+++ b/AndroidBienchen/res/layout/fragment_cam.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="de.androidbienchen.CamActivity$PlaceholderFragment" >
+    tools:context="de.androidbienchen.activities.CamActivity$PlaceholderFragment" >
 
     <ImageView
         android:id="@+id/cam_image"
