--- a/AndroidBienchen/res/values/color.xml
+++ b/AndroidBienchen/res/values/color.xml
@@ -3,6 +3,6 @@
     <color name="black">#000000</color>
     <color name="start_menu_button_color_light">#F9CE1D</color>
     <color name="start_menu_button_color_dark">#FF8800</color> 
-    <color name="start_menu_background_color">#FFEA40</color>
+    <color name="yellow">#FFEA40</color>
 
 </resources>
