--- a/AndroidBienchen/res/layout/event_dialog.xml
+++ b/AndroidBienchen/res/layout/event_dialog.xml
@@ -9,15 +9,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="TextView" />
+        android:textAppearance="?android:attr/textAppearanceMedium"  />
 
     <TextView
         android:id="@+id/eventdialog_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/eventdialog_info"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/eventdialog_info"
-        android:layout_marginTop="18dp"
-        android:text="TextView" />
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </RelativeLayout>
