first chat offline implementation

--- a/AndroidBienchen/res/layout/chat_input.xml
+++ b/AndroidBienchen/res/layout/chat_input.xml
@@ -3,20 +3,37 @@
     android:layout_gravity="bottom"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    
-    <EditText
-        android:id="@+id/chat_input"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/send_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:gravity="center"
         android:text="@string/btn_ok"
         android:textSize="16sp" />
+
+    <EditText
+        android:id="@+id/chat_input_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@+id/send_button"
+        android:ems="10" >
+
+        <requestFocus />
+    </EditText>
+
+    <ListView
+        android:id="@+id/message_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/send_button"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" >
+
+    </ListView>
     
 </RelativeLayout>
