--- a/AndroidBienchen/res/layout/chat_income_message_item.xml
+++ b/AndroidBienchen/res/layout/chat_income_message_item.xml
@@ -1,32 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
-    
-       <TextView
-        android:id="@+id/message_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/username_container"
-        android:layout_toRightOf="@id/message_container"
-        android:gravity="right"
-        android:textSize="12sp" />
- 
-    <TextView
-        android:id="@+id/message_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/username_container"
-        android:layout_below="@+id/username_container"
-        android:gravity="left"
-        android:textSize="12sp" />
     
     <TextView
         android:id="@+id/username_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:gravity="left"
         android:textSize="16sp" />
+    
+    <LinearLayout 
+        android:id="@+id/message_linear_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
  
-</RelativeLayout>
+    <TextView
+        android:id="@+id/message_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:textSize="14sp" />
+    
+    <TextView
+        android:id="@+id/message_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="10sp" />
+    </LinearLayout>
+</LinearLayout>
