--- a/AndroidBienchen/res/layout/chat_income_message_item.xml
+++ b/AndroidBienchen/res/layout/chat_income_message_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
@@ -10,25 +10,20 @@
         android:layout_height="wrap_content"
         android:gravity="left"
         android:textSize="16sp" />
-    
-    <LinearLayout 
-        android:id="@+id/message_linear_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
  
     <TextView
         android:id="@+id/message_container"
-        android:layout_width="match_parent"
+        android:layout_below="@id/username_container"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="left"
         android:textSize="14sp" />
     
     <TextView
         android:id="@+id/message_date"
+        android:layout_below="@id/message_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="10sp" />
-    </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
