--- a/AndroidBienchen/res/menu/calendar.xml
+++ b/AndroidBienchen/res/menu/calendar.xml
@@ -4,8 +4,8 @@
 
     <item
         android:id="@+id/action_refresh"
-        android:icon="@android:drawable/ic_menu_help"
         android:showAsAction="ifRoom"
-        android:title="sync"/>
+        android:title="sync"
+        android:icon="@android:drawable/ic_menu_help"/>
 
 </menu>
