--- a/AndroidBienchen/res/layout/fragment_presence_status.xml
+++ b/AndroidBienchen/res/layout/fragment_presence_status.xml
@@ -7,18 +7,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="de.androidbienchen.activities.PresenceStatusActivity$PlaceholderFragment" >
-
-    <TextView
-        android:id="@+id/statusView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:layout_width="wrap_content"
+    
+     <ListView
+        android:id="@+id/status_list"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/statusView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp"
-        android:text="Soll: Latitude:48.59662/Longitude:12.02154 " />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" >
+
+    </ListView>
 
 </RelativeLayout>
