--- a/AndroidBienchen/res/layout/listitem_person.xml
+++ b/AndroidBienchen/res/layout/listitem_person.xml
@@ -5,34 +5,32 @@
     android:padding="16dp">
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/status_image"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        
-        android:src="@drawable/calendar_next_arrow" />
+        android:contentDescription="Just a Picture" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/present_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="16dp"
         android:layout_toRightOf="@+id/imageView1"
         android:alpha=".87"
-        android:text="NameEins"
         android:textSize="16sp" />
     
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/presence_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="16dp"
         android:layout_toRightOf="@+id/imageView1"
         android:alpha=".54"
-        android:text="Status" 
-        android:textSize="14sp"/>
+        android:textSize="14sp"
+        android:textColor="@color/green"/>
 
 </RelativeLayout>
