--- a/AndroidBienchen/res/layout/event_dialog.xml
+++ b/AndroidBienchen/res/layout/event_dialog.xml
@@ -8,6 +8,7 @@
         android:id="@+id/eventdialog_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_centerHorizontal="true"
         android:textAppearance="?android:attr/textAppearanceMedium"  />
 
