--- a/AndroidBienchen/res/layout/chat_income_message_item.xml
+++ b/AndroidBienchen/res/layout/chat_income_message_item.xml
@@ -1,29 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
-    
-    <TextView
-        android:id="@+id/username_container"
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
+
+    <LinearLayout
+        android:id="@+id/left_chat_item_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginRight="20px"
         android:gravity="left"
-        android:textSize="16sp" />
- 
-    <TextView
-        android:id="@+id/message_container"
-        android:layout_below="@id/username_container"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/username_container_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:textSize="20sp"
+            android:textColor="@color/caldroid_darker_gray" />
+
+        <TextView
+            android:id="@+id/message_container_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/message_date_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="14sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/right_chat_item_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="left"
-        android:textSize="14sp" />
-    
-    <TextView
-        android:id="@+id/message_date"
-        android:layout_below="@id/message_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="10sp" />
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="20px"
+        android:gravity="right"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/username_container_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:textSize="20sp"
+            android:textColor="@color/caldroid_darker_gray" />
+
+        <TextView
+            android:id="@+id/message_container_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/message_date_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="14sp" />
+    </LinearLayout>
+
 </RelativeLayout>
