--- a/AndroidBienchen/res/layout/fragment_scale.xml
+++ b/AndroidBienchen/res/layout/fragment_scale.xml
@@ -7,10 +7,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/bee_heller"
     tools:context="de.androidbienchen.MainActivity$PlaceholderFragment" >
 
     
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,14 +28,14 @@
 	        android:id="@+id/statistic_layout"
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent"
-	        android:layout_alignParentTop="true"
-	        android:layout_centerHorizontal="true"
-	        android:layout_marginTop="119dp"
+	        android:layout_above="@+id/days_text_view"
+	        android:layout_alignRight="@+id/days_text_view"
 	        android:paddingBottom="@dimen/activity_vertical_margin"
 	        android:paddingLeft="@dimen/activity_horizontal_margin"
 	        android:paddingRight="@dimen/activity_horizontal_margin"
 	        android:paddingTop="@dimen/activity_vertical_margin"
 	        tools:context="de.androidbienchen.ScaleActivity$PlaceholderFragment" >
+
 	    </LinearLayout>
 
 	    <TextView
@@ -42,7 +44,9 @@
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentBottom="true"
 	        android:layout_alignParentRight="true"
-	        android:text="@string/day"
+	        android:text="@string/day"  
+	        android:textStyle="bold"  
+	        android:textAppearance="?android:attr/textAppearanceMedium"
 	        android:textColor="@color/black" />
 
 	    <TextView
@@ -51,8 +55,9 @@
 	        android:layout_height="wrap_content"
 	        android:layout_alignLeft="@+id/statistic_layout"
 	        android:layout_alignParentTop="true"
-	        android:layout_marginTop="95dp"
 	        android:text="@string/grad_kg"
+	        android:textStyle="bold"
+	        android:textAppearance="?android:attr/textAppearanceMedium"
 	        android:textColor="@color/black" />
 
 	</RelativeLayout>
