Chat finished + some changes....

--- a/AndroidBienchen/res/layout/navdrawer_item.xml
+++ b/AndroidBienchen/res/layout/navdrawer_item.xml
@@ -9,19 +9,13 @@
    android:minHeight="?android:attr/listPreferredItemHeightSmall"
    >
 
-    <ImageView
-       android:id="@+id/navmenuitem_icon"
-       android:layout_width="wrap_content"
-       android:layout_height="30dp"
-        android:layout_centerVertical="true"
-        android:paddingLeft="15dp"/>
-
     <TextView
        android:id="@+id/navmenuitem_label"
        android:layout_width="match_parent"
        android:layout_height="50dp"
-       android:layout_toRightOf="@id/navmenuitem_icon"
+       android:layout_marginLeft="15sp"
        android:gravity="center_vertical"
+       android:textSize="18sp"
        android:textColor="@color/black"/>
 
 </RelativeLayout>
