--- a/AndroidBienchen/res/layout/chat_income_message_item.xml
+++ b/AndroidBienchen/res/layout/chat_income_message_item.xml
@@ -9,30 +9,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginRight="20px"
+        android:layout_marginRight="20sp"
         android:gravity="left"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:background="@color/caldroid_transparent" >
 
         <TextView
             android:id="@+id/username_container_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="left"
-            android:textSize="20sp"
-            android:textColor="@color/caldroid_darker_gray" />
+            android:layout_marginLeft="30sp"
+            android:textColor="@color/caldroid_darker_gray"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/message_container_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="left"
+            android:layout_marginLeft="30sp"
             android:textSize="20sp" />
 
         <TextView
             android:id="@+id/message_date_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_marginLeft="30sp"
             android:textSize="14sp" />
     </LinearLayout>
 
@@ -41,30 +42,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_marginLeft="20px"
-        android:gravity="right"
-        android:orientation="vertical" >
+        android:layout_marginLeft="20sp"
+        android:orientation="vertical"
+        android:background="@color/caldroid_transparent" >
 
         <TextView
             android:id="@+id/username_container_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="left"
-            android:textSize="20sp"
-            android:textColor="@color/caldroid_darker_gray" />
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="20sp"
+            android:textColor="@color/caldroid_darker_gray"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/message_container_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="left"
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="20sp"
             android:textSize="20sp" />
 
         <TextView
             android:id="@+id/message_date_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="20sp"
             android:textSize="14sp" />
     </LinearLayout>
 
