--- a/AndroidBienchen/res/layout/chat_input.xml
+++ b/AndroidBienchen/res/layout/chat_input.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_gravity="bottom"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent" 
+    android:background="@drawable/bee_heller">
 
     <Button
         android:id="@+id/send_button"
