--- a/AndroidBienchen/res/layout/fragment_scale.xml
+++ b/AndroidBienchen/res/layout/fragment_scale.xml
@@ -1,4 +1,3 @@
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,54 +6,51 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/bee_heller"
     tools:context="de.androidbienchen.activities.MainActivity$PlaceholderFragment" >
 
-    
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="de.androidbienchen.activities.MainActivity$PlaceholderFragment" >
-	    
-	    <LinearLayout
-	        xmlns:android="http://schemas.android.com/apk/res/android"
-	        xmlns:tools="http://schemas.android.com/tools"
-	        android:id="@+id/statistic_layout"
-	        android:layout_width="match_parent"
-	        android:layout_height="match_parent"
-	        android:layout_alignParentTop="true"
-	        android:layout_centerHorizontal="true"
-	        android:layout_marginTop="119dp"
-	        android:paddingBottom="@dimen/activity_vertical_margin"
-	        android:paddingLeft="@dimen/activity_horizontal_margin"
-	        android:paddingRight="@dimen/activity_horizontal_margin"
-	        android:paddingTop="@dimen/activity_vertical_margin"
-	        tools:context="de.androidbienchen.activities.ScaleActivity$PlaceholderFragment" >
-	    </LinearLayout>
+    <RelativeLayout
+        android:id="@+id/relativeLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="de.androidbienchen.activities.MainActivity$PlaceholderFragment" >
 
-	    <TextView
-	        android:id="@+id/days_text_view"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignParentBottom="true"
-	        android:layout_alignParentRight="true"
-	        android:text="@string/day"
-	        android:textColor="@color/black" />
+        <LinearLayout
+            android:id="@+id/statistic_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            tools:context="de.androidbienchen.activities.ScaleActivity$PlaceholderFragment" >
+        </LinearLayout>
+    </RelativeLayout>
 
-	    <TextView
-	        android:id="@+id/grad_kg_text_view"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignLeft="@+id/statistic_layout"
-	        android:layout_alignParentTop="true"
-	        android:layout_marginTop="95dp"
-	        android:text="@string/grad_kg"
-	        android:textColor="@color/black" />
+    <TextView
+        android:id="@+id/days_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/relativeLayout1"
+        android:text="@string/day"
+        android:textStyle="bold|normal"
+        android:textColor="@color/black" />
 
-	</RelativeLayout>
+    <TextView
+        android:id="@+id/grad_kg_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/relativeLayout1"
+        android:layout_alignTop="@+id/relativeLayout1"
+        android:layout_marginLeft="18dp"
+        android:text="@string/grad_kg"
+        android:textStyle="bold|normal"
+        android:textColor="@color/black" />
+
 </RelativeLayout>
-
