--- a/AndroidBienchen/res/layout/fragment_cam.xml
+++ b/AndroidBienchen/res/layout/fragment_cam.xml
@@ -2,20 +2,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bee_heller"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/bee_heller"
     tools:context="de.androidbienchen.activities.CamActivity$PlaceholderFragment" >
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/image_description"
+        android:textSize="20sp" />
 
     <ImageView
         android:id="@+id/cam_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="184dp"
- 		/>
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
