--- a/AndroidBienchen/res/layout/fragment_scale.xml
+++ b/AndroidBienchen/res/layout/fragment_scale.xml
@@ -2,11 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bee_heller"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/bee_heller"
     tools:context="de.androidbienchen.activities.MainActivity$PlaceholderFragment" >
 
     <RelativeLayout
@@ -39,8 +39,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/relativeLayout1"
         android:text="@string/day"
-        android:textStyle="bold|normal"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:textStyle="bold|normal" />
 
     <TextView
         android:id="@+id/grad_kg_text_view"
@@ -50,7 +50,7 @@
         android:layout_alignTop="@+id/relativeLayout1"
         android:layout_marginLeft="18dp"
         android:text="@string/grad_kg"
-        android:textStyle="bold|normal"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:textStyle="bold|normal" />
 
 </RelativeLayout>
