--- a/AndroidBienchen/res/layout/navdrawer_item.xml
+++ b/AndroidBienchen/res/layout/navdrawer_item.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- aus online Tutorial -->
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
